[package]
name = "pallet-staking"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
# sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
# sp-io ={ version = "3.0.0", default-features = false, path = "../../primitives/io" }
# sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
# sp-staking = { version = "3.0.0", default-features = false, path = "../../primitives/staking" }
# frame-support = { version = "3.0.0", default-features = false, path = "../support" }
# frame-system = { version = "3.0.0", default-features = false, path = "../system" }
# pallet-session = { version = "3.0.0", default-features = false, features = ["historical"], path = "../session" }
# pallet-authorship = { version = "3.0.0", default-features = false, path = "../authorship" }
# sp-application-crypto = { version = "3.0.0", default-features = false, path = "../../primitives/application-crypto" }
# frame-election-provider-support = { version = "3.0.0", default-features = false, path = "../election-provider-support" }
log = { version = "0.4.14", default-features = false }
paste = "1.0"

# Optional imports for benchmarking
# frame-benchmarking = { version = "3.1.0", default-features = false, path = "../benchmarking", optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

# 添加依赖
[dependencies.sp-std]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-staking]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-session]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-authorship]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-application-crypto]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-election-provider-support]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
optional = true
tag = 'monthly-2021-07'
version = '3.1.0'

[dependencies.pallet-provider]
default-features = false
path = '../provider'
version = '3.0.0'

[dependencies.pallet-gateway]
default-features = false
path = '../gateway'
version = '3.0.0'

# [dev-dependencies]
# sp-storage = { version = "3.0.0", path = "../../primitives/storage" }
# sp-tracing = { version = "3.0.0", path = "../../primitives/tracing" }
# sp-core = { version = "3.0.0", path = "../../primitives/core" }
# pallet-balances = { version = "3.0.0", path = "../balances" }
# pallet-timestamp = { version = "3.0.0", path = "../timestamp" }
# pallet-staking-reward-curve = { version = "3.0.0",  path = "../staking/reward-curve" }
# substrate-test-utils = { version = "3.0.0", path = "../../test-utils" }
# frame-benchmarking = { version = "3.1.0", path = "../benchmarking" }
# frame-election-provider-support = { version = "3.0.0", features = ["runtime-benchmarks"], path = "../election-provider-support" }
# rand_chacha = { version = "0.2" }
# parking_lot = "0.11.1"
# hex = "0.4"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"log/std",
	"frame-election-provider-support/std",
	"pallet-provider/std",
	"pallet-gateway/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-election-provider-support/runtime-benchmarks",
	"rand_chacha",
]
try-runtime = ["frame-support/try-runtime"]
